Update version information in 'docs.html'

--- a/docs.html
+++ b/docs.html
@@ -192,6 +192,19 @@
                             </div>
                         </li>
                     </ul>
+                    <ul class="media-list">
+                        <li class="media">
+                            <div class="media-left">
+                                <a href="#">
+                                    <img class="media-object" src="img/0_6.png" alt="0.4" width="100">
+                                </a>
+                            </div>
+                            <div class="media-body">
+                                <h4 class="media-heading">Version 0.6</h4>
+                                <p>&middot; Added several functions to work with graphs: <code>create_nodes</code>, <code>create_edges</code>, <code>combine_nodes</code>, <code>combine_edges</code>, <code>scale_nodes</code>, <code>scale_edges</code>, <code>get_nodes</code>, <code>node_info</code>, <code>graphviz_graph</code>, <code>graphviz_render</code>, and <code>graphviz_export</code><br />&middot; Removed the <code>graphviz_nodes_edges_df</code> and <code>graphviz_single_df</code> functions</p>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
