Update header with link to page

--- a/mermaid.html
+++ b/mermaid.html
@@ -50,6 +50,9 @@
                     <li class="active">
                       <a href="mermaid.html">Mermaid</a>
                     </li>
+                    <li>
+                      <a href="graphs.html">Building Graphs</a>
+                    </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="http://github.com/rich-iannone/DiagrammeR">GitHub</a></li>
