Modify some text

--- a/graphs.html
+++ b/graphs.html
@@ -80,16 +80,16 @@
                     <div>
                         <img src="img/graph_object.png" class="img-responsive center-block">
                     </div>
-                    <p>More text.</p>
-
+                    <p>Essentially, the elements that make up a graph are tightly coupled inside the graph object. The myriad functions developed for working with the graph object:</p>
+                    <ul>
+                        <li>preserve the integrity of the data</li>
+                        <li>allow for graph migrations from state to state</li>
+                        <li>provide an easy-to-use interface for working with graph data</li>
+                    </ul>
                 </div>
-
                 <div class="bs-docs-section">
                     <h1 id="graph-workflow" class="page-header">Graph Workflow</h1>
-                    <p class="lead">If you're planning on creating graph diagrams and also making use of external datasets, you can make use a set of <strong>DiagrammeR</strong> functions that work well with and as data frames. Here is a basic schematic of a possible graph workflow, using some <strong>DiagrammeR</strong> functions to build toward a graph object from a group of data frames.</p>
-                    <div>
-                        <img src="img/Graph_Workflow.png" class="img-responsive center-block">
-                    </div>
+                    <p class="lead">If you're planning on creating graph diagrams and also making use of external datasets, you can make use a set of <strong>DiagrammeR</strong> functions that work well with and as data frames.</p>
                     <h2 id="create-graph-render">Create Graph, Render</h2>
                     <p>With the <code>graphviz_graph</code> function, it's possible to generate a graph diagram object without interacting directly with <strong>DOT</strong> code. The function has the following options:</p>
 <div>
