--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                                     <h4 class="subheading">Functions to Build Graphs</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">A large selection of new functions to creating graph diagrams is now available. No need to interact directly with <strong>DOT</strong> code, just build diagrams in an <strong>R</strong>-like way.</p>
+                                    <p class="text-muted">A large selection of new functions for creating graph diagrams is now available. No need to interact directly with <strong>DOT</strong> code, just build diagrams in an <strong>R</strong>-like way.</p>
                                 </div>
                             </div>
                         </li>
