--- a/graphs.html
+++ b/graphs.html
@@ -78,7 +78,10 @@
                     <p>The <strong>DiagrammeR</strong> graph object, created by using the function <code>create_graph</code>, holds information on a graph's nodes, edges, default attributes, and rendering code. Creating a graph object can be as simple as using <code>create_graph()</code>, however, that will be an empty graph and you'll want to populate it.</p>
                     <p>The <strong>DiagrammeR</strong> graph object holds buckets of data that reflect the current state of the graph. The graph can be inspected, nodes and edges can be added, edited, or removed, and, a visualization of the graph or export of its data can be made at any point. The different facets of what make up the graph object can be visualized as follows.</p>
                     <div>
-                        <img src="img/graph_object.png" class="img-responsive center-block">
+                        <img src="img/graph-functions/graph_object.png" class="img-responsive center-block">
+                    </div>
+                    <div>
+                        <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
                     </div>
                     <p>Essentially, the elements that make up a graph are tightly coupled inside the graph object. The myriad functions developed for working with the graph object:</p>
                     <ul>
