Replace 'graph_object.html'

--- a/inst/htmlwidgets/graph_object.html
+++ b/inst/htmlwidgets/graph_object.html
@@ -17,7 +17,7 @@
         </filter>
     </defs>
     <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
-        <g id="graph_object__template" sketch:type="MSLayerGroup" transform="translate(16.000000, 16.000000)">
+        <g id="graph_object__values" sketch:type="MSLayerGroup" transform="translate(16.000000, 16.000000)">
             <g id="graph" stroke="#DF40FF" filter="url(#filter-1)" stroke-width="8" fill="#966FB8" sketch:type="MSShapeGroup">
                 <circle id="Oval-1" cx="239.814799" cy="239.814799" r="239.814799"></circle>
             </g>
@@ -45,10 +45,25 @@
             </g>
             <g id="directed?" transform="translate(312.000000, 65.000000)" sketch:type="MSShapeGroup">
                 <circle id="Oval-31" stroke="#5C5C5C" stroke-width="2" fill="#B2AFAF" cx="28.8096049" cy="28.6971209" r="28.7774337"></circle>
-                <path d="M2.71698113,28 L20.8301887,28" id="Line" stroke="#5D5D5D" stroke-width="6" stroke-linecap="square"></path>
-                <path d="M23.0943396,36.8867925 L23.0943396,18.7735849 L36.6792453,27.8301887 L23.0943396,36.8867925 Z" id="Triangle-1" fill="#5D5D5D"></path>
+                <path d="M2.71698113,28 L20.8301887,28" id="directed_line" stroke="#5D5D5D" stroke-width="6" stroke-linecap="square"></path>
+                <path d="M23.0943396,36.8867925 L23.0943396,18.7735849 L36.6792453,27.8301887 L23.0943396,36.8867925 Z" id="directed_triangle" fill="#5D5D5D"></path>
             </g>
         </g>
+        <text id="node_attr_count" sketch:type="MSTextLayer" font-family="Helvetica Neue" font-size="24" font-weight="260" sketch:alignment="middle" fill="#5C5C5C">
+            <tspan x="215.328" y="118">0</tspan>
+        </text>
+        <text id="edge_attr_count" sketch:type="MSTextLayer" font-family="Helvetica Neue" font-size="24" font-weight="260" sketch:alignment="middle" fill="#5C5C5C">
+            <tspan x="282.328" y="118">0</tspan>
+        </text>
+        <text id="graph_attr_count" sketch:type="MSTextLayer" font-family="Helvetica Neue" font-size="24" font-weight="260" sketch:alignment="middle" fill="#5C5C5C">
+            <tspan x="144.828" y="118">0</tspan>
+        </text>
+        <text id="edge_count" sketch:type="MSTextLayer" font-family="Helvetica Neue" font-size="36" font-weight="260" sketch:alignment="right" fill="#5C5C5C">
+            <tspan x="420.984" y="269">0</tspan>
+        </text>
+        <text id="node_count" sketch:type="MSTextLayer" font-family="Helvetica Neue" font-size="36" font-weight="260" sketch:alignment="right" fill="#5C5C5C">
+            <tspan x="208.984" y="269">0</tspan>
+        </text>
     </g>
 </svg>
 
