--- a/graphs.html
+++ b/graphs.html
@@ -431,6 +431,12 @@ create_graph(nodes_df = many_nodes, edges_df = many_edges,
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
                         </div>
+                        <div>
+                            <img src="img/graph-functions/display_graph_object_2x.png" class="img-responsive center-block">
+                        </div>
+                        <div>
+                            <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
+                        </div>
                     <p>With the <code>create_graph</code> function, it's possible to generate a graph diagram object without interacting directly with <strong>DOT</strong> code. The function has the following options:</p>
 <div>
 <pre><code>create_graph(
