Remove extra </em> tag

--- a/graphs.html
+++ b/graphs.html
@@ -308,7 +308,7 @@ all_edges
                     </div>
                     <p>With the <code>scale_nodes</code> function, it's possible to create node attributes with values that are scaled to numerical data in another column. The scaled attribute values can consist of either numerical values or hexadecimal color values. Scaled values can be made for the following attributes:</p>
                         <ul>
-                            <li><code>fontsize</code> <em>numeric</em></em></li>
+                            <li><code>fontsize</code> <em>numeric</em></li>
                             <li><code>labelfontsize</code> <em>numeric</em></li>
                             <li><code>penwidth</code> <em>numeric</em></li>
                             <li><code>height</code> <em>numeric</em></li>
