--- a/graphs.html
+++ b/graphs.html
@@ -89,13 +89,19 @@
                         <li>allow for graph migrations from state to state</li>
                         <li>provide an easy-to-use interface for working with graph data</li>
                     </ul>
+                    <p>Getting data into a graph object is made easier through the use of specialized data frames for that contain either node data and attributes and those data frames that contain edge data and edge attributes. These data frames are especially helpful when moving data from external sources into a graph. This is because these data frames are permitted to have columns of arbitrary data alongside columns named for node or edge attributes. Having columns of data available on a per-node or per-edge basis allows for easy numerical scaling of attributes and thus a highly visual means to differentiate nodes and edges by size, color, shape, opacity, length, and more.</p>
                     <div>
                         <img src="img/graph-functions/node_edge_data_frames_2x.png" class="img-responsive center-block">
                     </div>
                     <div>
-                            <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
+                        <img src="img/graph-functions/header_node_attributes_2x.png" class="img-responsive center-block">
                     </div>
-                    <p>Getting data into a graph object is made easier through the use of specialized data frames for that contain either node data and attributes and those data frames that contain edge data and edge attributes. These data frames are especially helpful when moving data from external sources into a graph. This is because these data frames are permitted to have columns of arbitrary data alongside columns named for node or edge attributes. Having columns of data available on a per-node or per-edge basis allows for easy numerical scaling of attributes and thus a highly visual means to differentiate nodes and edges by size, color, shape, opacity, length, etc.</p>
+                    <div>
+                        <img src="img/graph-functions/node_attributes_2x.png" class="img-responsive center-block">
+                    </div>
+                    <div>
+                        <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
+                    </div>
                 </div>
                 <div class="bs-docs-section">
                     <h1 id="graph-functions" class="page-header">Graph Functions</h1>
