--- a/graphs.html
+++ b/graphs.html
@@ -102,6 +102,12 @@
                     <div>
                         <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
                     </div>
+                    <div>
+                        <img src="img/graph-functions/edge_attributes_2x.png" class="img-responsive center-block">
+                    </div>
+                    <div>
+                        <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
+                    </div>
                 </div>
                 <div class="bs-docs-section">
                     <h1 id="graph-functions" class="page-header">Graph Functions</h1>
