--- a/graphs.html
+++ b/graphs.html
@@ -103,6 +103,9 @@
                         <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
                     </div>
                     <div>
+                        <img src="img/graph-functions/header_edge_attributes_2x.png" class="img-responsive center-block">
+                    </div>
+                    <div>
                         <img src="img/graph-functions/edge_attributes_2x.png" class="img-responsive center-block">
                     </div>
                     <div>
